Fix stream issues