@@ -31,6 +31,7 @@ import org.wso2.ballerinalang.compiler.util.CompilerContext;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * A util class for creating type param resolved version of the lang lib functions.
@@ -125,7 +126,7 @@ public class LangLibFunctionBinder {
 
         List<BType> paramTypes = new ArrayList<>();
         if (newParams.size() == original.paramTypes.size()) {
-            paramTypes.addAll(newParams.stream().map(BSymbol::getType).toList());
+            paramTypes.addAll(newParams.stream().map(BSymbol::getType).collect(Collectors.toList()));
         } else {
             paramTypes.addAll(original.paramTypes);
         }
