@@ -46,6 +46,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static org.ballerinalang.model.symbols.SymbolOrigin.BUILTIN;
 import static org.ballerinalang.model.symbols.SymbolOrigin.COMPILED_SOURCE;
@@ -135,7 +136,7 @@ public class BallerinaModule extends BallerinaSymbol implements ModuleSymbol {
             this.typeDefs = this.allSymbols().stream()
                     .filter(symbol -> symbol.kind() == SymbolKind.TYPE_DEFINITION)
                     .map(symbol -> (TypeDefinitionSymbol) symbol)
-                    .toList();
+                    .collect(Collectors.toList());
         }
 
         return this.typeDefs;
