@@ -32,6 +32,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.StringJoiner;
+import java.util.stream.Collectors;
 
 /**
  * Represents an implementation of a path segment list.
@@ -68,7 +69,7 @@ public class BallerinaPathSegmentList implements PathSegmentList {
         List<PathParameterSymbol> pathParams = new ArrayList<>();
 
         int internalPathParamCount = 0;
-        List<Name> segments = this.internalPathSegmentSymbols.stream().map(s -> s.name).toList();
+        List<Name> segments = this.internalPathSegmentSymbols.stream().map(s -> s.name).collect(Collectors.toList());
         for (int i = 0; i < segments.size(); i++) {
             Name internalSegment = segments.get(i);
             BResourcePathSegmentSymbol pathSegSymbol = this.internalPathSegmentSymbols.get(i);
@@ -163,7 +164,7 @@ public class BallerinaPathSegmentList implements PathSegmentList {
 
         StringJoiner stringJoiner = new StringJoiner("/");
         List<PathSegment> segments = list();
-        
+
         for (PathSegment segment : segments) {
             stringJoiner.add(segment.signature());
         }
