@@ -41,6 +41,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * Manages interaction with completion providers via compiler plugins.
@@ -160,7 +161,7 @@ public class CompletionManager {
                     }
                     return Optional.of(listenerType);
                 }).filter(listenerType -> listenerType.isPresent() && listenerType.get().getModule().isPresent())
-                .map(listenerType -> listenerType.get().getModule().get()).toList();
+                .map(listenerType -> listenerType.get().getModule().get()).collect(Collectors.toList());
     }
 
     private TypeSymbol getRawType(TypeSymbol typeDescriptor) {
