@@ -46,6 +46,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -145,7 +146,7 @@ public final class PackageConfigCreator {
                         .map(moduleData -> createModuleConfig(packageManifest.descriptor(), moduleData,
                                 packageId, moduleDependencyGraph)),
                 Stream.of(createDefaultModuleConfig(packageManifest.descriptor(),
-                        packageData.defaultModule(), packageId, moduleDependencyGraph))).toList();
+                        packageData.defaultModule(), packageId, moduleDependencyGraph))).collect(Collectors.toList());
 
 
         DocumentConfig ballerinaToml = packageData.ballerinaToml()
@@ -225,7 +226,7 @@ public final class PackageConfigCreator {
         // TODO: no need Remove duplicate paths before processing
         Set<Path> distinctResources = new HashSet<>(resources);
         return distinctResources.stream().map(
-                distinctResource -> createResourceConfig(distinctResource, packagePath)).toList();
+                distinctResource -> createResourceConfig(distinctResource, packagePath)).collect(Collectors.toList());
     }
 
     private static ResourceConfig createResourceConfig(Path path, Path packagePath) {
@@ -238,7 +239,7 @@ public final class PackageConfigCreator {
                 .stream()
                 .sorted(Comparator.comparing(DocumentData::name))
                 .map(srcDoc -> createDocumentConfig(srcDoc, moduleId))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     static DocumentConfig createDocumentConfig(DocumentData documentData, ModuleId moduleId) {
