@@ -25,6 +25,7 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * A container for various package representation that provides efficient access to packages.
@@ -80,6 +81,6 @@ public class PackageContainer<T> {
                 .stream()
                 .map(Map::values)
                 .flatMap(Collection::stream)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
