@@ -26,6 +26,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * A container for various package representation that provides efficient access to packages.
@@ -81,6 +82,6 @@ public class PackageVersionContainer<T> {
                 .flatMap(Collection::stream)
                 .map(Map::values)
                 .flatMap(Collection::stream)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
