@@ -45,6 +45,7 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * Responsible for creating the dependency graph with automatic version updates.
@@ -164,7 +165,7 @@ public class ResolutionEngine {
 
     private void populateStaticDependencyGraph(Collection<DependencyNode> directDependencies) {
         List<DependencyNode> errorNodes = directDependencies.stream()
-                .filter(DependencyNode::errorNode).toList();
+                .filter(DependencyNode::errorNode).collect(Collectors.toList());
         for (DependencyNode errorNode : errorNodes) {
             graphBuilder.addErroneousDependency(
                     rootPkgDesc, errorNode.pkgDesc, errorNode.scope, errorNode.resolutionType);
