@@ -98,6 +98,7 @@ import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import static org.ballerinalang.model.symbols.SymbolOrigin.VIRTUAL;
 import static org.ballerinalang.util.diagnostic.DiagnosticErrorCode.INVALID_QUERY_CONSTRUCT_INFERRED_MAP;
@@ -283,7 +284,7 @@ public class QueryTypeChecker extends TypeChecker {
         List<BType> safeResultTypes = types.getAllTypes(targetType, true).stream()
                 .filter(t -> !types.isAssignable(t, symTable.errorType))
                 .filter(t -> !types.isAssignable(t, symTable.nilType))
-                .toList();
+                .collect(Collectors.toList());
         // resultTypes will be empty if the targetType is `error?`
         if (safeResultTypes.isEmpty()) {
             safeResultTypes = List.of(symTable.noType);
@@ -498,7 +499,7 @@ public class QueryTypeChecker extends TypeChecker {
             validateKeySpecifier(queryExpr.fieldNameIdentifierList, constraintType);
             markReadOnlyForConstraintType(constraintType);
             tableType.fieldNameList = queryExpr.fieldNameIdentifierList.stream()
-                    .map(identifier -> ((BLangIdentifier) identifier).value).toList();
+                    .map(identifier -> ((BLangIdentifier) identifier).value).collect(Collectors.toList());
         }
         if (Symbols.isFlagOn(resolvedType.getFlags(), Flags.READONLY)) {
             return ImmutableTypeCloner.getImmutableIntersectionType(null, types,
@@ -644,7 +645,7 @@ public class QueryTypeChecker extends TypeChecker {
         return clauses.stream()
                 .filter(clause -> (clause.getKind() == NodeKind.FROM || clause.getKind() == NodeKind.JOIN))
                 .map(clause -> ((BLangInputClause) clause).collection.getBType())
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private BType getResolvedType(BType initType, BType expType, boolean isReadonly, SymbolEnv env) {
